--- a/jobs/templates/employer.html
+++ b/jobs/templates/employer.html
@@ -8,33 +8,30 @@
     </div>
 </div>
   <h2>Jobs</h2>
-
+  {{ show_jobs(jobs) }}
   <h2>Reviews</h2>
-    {# TODO: Remove comment and add for loop
-      {% %}
-    #}
+  {% for review in reviews %}
+
+  {% endfor %}
     <div class="box">
       <article class="media">
         <div class="media-left">
             {% for _ in range(0, review['rating']): %}
                 <span class="fa fa-star checked"></span>
+                </div>
+                <div class="media-content">
+                <div class="content">
+                    <p>
+                        <strong>review['title']</strong>
+                        <small>review['status']</small>
+                        <small>review['date']</small>
+                        review
+                    </p>
+                </div>
+                </div>
+                </article>
+                </div>
             {% endfor %}
-        </div>
-        <div class="media-content">
-          <div class="content">
-              <p>
-                  <strong>title</strong>
-                  <small>status</small>
-                  <small>date</small>
-                  review
-              </p>
-          </div>
-        </div>
-      </article>
-    </div>
-    {# TODO: Remove comment and end for loop
-      {% %}
-    #}
   <div class="columns">
     <div class="column">
       <a class="button is-info is-pulled-right">Create Review</a>
